test/integration/cli-args/sstanc.t/fail/16_transformed_parameter_likelihood_before_prior.stan
// Compile with: stanc --sstanc --sstan-protect=y
data {
  real y;
}
parameters {
  real theta;
}
transformed parameters {
  real phi = theta;
}
model {
  y ~ normal(phi, 1);
  theta ~ normal(0, 1);
}
